Mobile overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,19 +165,18 @@ header .line1, .line2, .line3 {
     nav .items {
         position: absolute;
         right: 0%;
-        height: 95vh;
         top: 7.8em;
         background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
         display: flex;
         flex-direction: column;
         align-items: center;
         width: 30%;
-        transform: translateX(150%);
-        transition: transform 0.5s ease-in-out;
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
     }
     
     .change .items {
-        transform: translateX(10%);
+        opacity: 1;
     }
     
     nav .links {
@@ -938,6 +937,10 @@ footer a:focus {
 }
 
 @media (max-width: 53rem) {
+    .contact-bg {
+        box-shadow: none;
+    }
+    
     footer h1 {
         font-size: 3rem;
     }
